// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > review > postReviewResponse > audit > expected call 1`] = `
{
  "_id": "6776901b879d08e34b599d7e",
  "comment": "test comment",
  "createdAt": "2024-05-17T06:13:41.690Z",
  "decision": "approve",
  "entity": "user:user",
  "kind": "release",
  "parentId": "66854110aab20df2b7481a82",
  "reactions": [],
  "role": "mtr",
  "updatedAt": "2024-05-17T06:13:41.690Z",
  "user": "user",
}
`;

exports[`routes > review > postReviewResponse > missing review decision 1`] = `
{
  "error": {
    "context": {
      "errors": [
        {
          "code": "invalid_union_discriminator",
          "message": "Invalid discriminator value. Expected 'approve' | 'undo' | 'request_changes'",
          "options": [
            "approve",
            "undo",
            "request_changes",
          ],
          "path": [
            "body",
            "decision",
          ],
        },
      ],
    },
    "message": "Path: body.decision - Message: Invalid discriminator value. Expected 'approve' | 'undo' | 'request_changes'",
    "name": "Bailo Error",
  },
}
`;

exports[`routes > review > postReviewResponse > successfully respond to a review 1`] = `
{
  "response": {
    "_id": "6776901b879d08e34b599d7e",
    "comment": "test comment",
    "createdAt": "2024-05-17T06:13:41.690Z",
    "decision": "approve",
    "entity": "user:user",
    "kind": "release",
    "parentId": "66854110aab20df2b7481a82",
    "reactions": [],
    "role": "mtr",
    "updatedAt": "2024-05-17T06:13:41.690Z",
    "user": "user",
  },
}
`;

exports[`routes > review > postReviewResponse > successfully respond to a review without a comment 1`] = `
{
  "response": {
    "_id": "6776901b879d08e34b599d7e",
    "comment": "test comment",
    "createdAt": "2024-05-17T06:13:41.690Z",
    "decision": "approve",
    "entity": "user:user",
    "kind": "release",
    "parentId": "66854110aab20df2b7481a82",
    "reactions": [],
    "role": "mtr",
    "updatedAt": "2024-05-17T06:13:41.690Z",
    "user": "user",
  },
}
`;
